# vec_noise

./: .gitignore  MANIFEST.in  Makefile  pyproject.toml  setup.py
scripts/: 2dtexture.py  animate_tex.py  atmosphere.py  bump.py  planet.py
src/vec_noise/: __init__.py
tests/: test.py
